2011-12-04 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk--save-exclude-regexp): Add Backup
	files that match regexp "[~#]$".

2011-12-01 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk--save-title): Remove extra line.
	(tinydesk-install-default-keybindings): Adjust comments.
	(tinydesk--recover-mark-problem-lines): New user variable.
	(tinydesk-recover-state): Use `tinydesk--recover-mark-problem-lines'.

2011-11-22 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytab.el (wizard): Define backtab in non-window system.
	E.g. for Putty terminal.

2011-11-18 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyreplace.el (tinyreplace-define-keys-local-map): Rename
	from `tinyreplace-define-keys-compile-map'.

2011-11-16 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinymailbox.el (tinymailbox--header-begin-regexp):
	Rename from `tinymailbox:-header-begin-regexp'.

	* tiny/tinypath.el (tinypath-cache-display): Correct docstring
	variable name `tinypath--cache'.

	* tiny/tinyurl.el (tinyurl-dispatcher-1): correct message to
	announce `tinyurl--validate-hook"'.

2011-09-20 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-string):
	Add Debian bug URL detection. Tighten plain number regexp not
	to match YYYY-MM-DD

2011-06-23 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-mark-region): Add missing paren.

2011-04-30 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-bug-p):
	Add missing paren.
	(tinydebian-bts-generic-bug-subject): New. Support Emacs BTS.
	(tinydebian-bts-mail-type-reply): Use `tinydebian-bts-generic-bug-subject'.
	(tinydebian-debian-url-bug-initialize-p): Add BTS parameter.
	(tinydebian-debian-url-bug-info): Add BTS parameter.
	(tinydebian-debian-url-bug-initialize): Add BTS parameter. Add Emacs BTS
	support.
	(tinydebian-debian-bug-info-message-all-macro): Add BTS parameter.